--- a/SmallHoneybee/SmallHoneybee.Wpf/Report/SaleOrderDetail.rdlc
+++ b/SmallHoneybee/SmallHoneybee.Wpf/Report/SaleOrderDetail.rdlc
@@ -4,9 +4,9 @@
     <ReportItems>
       <Line Name="Line1">
         <Top>0.62431in</Top>
-        <Left>0.04042in</Left>
+        <Left>0.01542in</Left>
         <Height>0in</Height>
-        <Width>2.89582in</Width>
+        <Width>2.78041in</Width>
         <Style>
           <Border>
             <Style>Dashed</Style>
@@ -17,16 +17,16 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.71041in</Width>
+              <Width>1.64532in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.42837in</Width>
+              <Width>0.41835in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.36292in</Width>
+              <Width>0.31323in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.40871in</Width>
+              <Width>0.44192in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -245,7 +245,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=FormatNumber(Fields!Quantity.Value,2)</Value>
+                              <Value>=FormatNumber(Fields!Quantity.Value,0)</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                               </Style>
@@ -429,9 +429,9 @@
         </TablixRowHierarchy>
         <DataSetName>SOProuceDetailDataSet</DataSetName>
         <Top>0.65348in</Top>
-        <Left>0.02583in</Left>
+        <Left>0.00083in</Left>
         <Height>0.49237in</Height>
-        <Width>2.91041in</Width>
+        <Width>2.81882in</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
@@ -443,9 +443,9 @@
       </Tablix>
       <Line Name="Line2">
         <Top>1.18126in</Top>
-        <Left>0.02583in</Left>
+        <Left>0.00083in</Left>
         <Height>0in</Height>
-        <Width>2.91041in</Width>
+        <Width>2.795in</Width>
         <ZIndex>2</ZIndex>
         <Style>
           <Border>
@@ -457,10 +457,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.98751in</Width>
+              <Width>1.78398in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.91248in</Width>
+              <Width>1.01103in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -477,9 +477,7 @@
                           <TextRuns>
                             <TextRun>
                               <Value>=Fields!MerchantsName.Value</Value>
-                              <Style>
-                                <FontSize>8pt</FontSize>
-                              </Style>
+                              <Style />
                             </TextRun>
                           </TextRuns>
                           <Style>
@@ -592,9 +590,9 @@
         </TablixRowHierarchy>
         <DataSetName>SOProduceSummaryDataSet</DataSetName>
         <Top>0.21389in</Top>
-        <Left>0.03625in</Left>
+        <Left>0.01125in</Left>
         <Height>0.36875in</Height>
-        <Width>2.89999in</Width>
+        <Width>2.795in</Width>
         <ZIndex>3</ZIndex>
         <Style>
           <Border>
@@ -606,10 +604,10 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>1.77499in</Width>
+              <Width>1.63698in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.10126in</Width>
+              <Width>1.12677in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -904,9 +902,9 @@
         </TablixRowHierarchy>
         <DataSetName>SOProduceSummaryDataSet</DataSetName>
         <Top>1.2382in</Top>
-        <Left>0.03417in</Left>
+        <Left>0.00917in</Left>
         <Height>0.70834in</Height>
-        <Width>2.87625in</Width>
+        <Width>2.76375in</Width>
         <ZIndex>4</ZIndex>
         <Style>
           <Border>
@@ -918,7 +916,7 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.88459in</Width>
+              <Width>2.76918in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -934,9 +932,9 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>="电话: " &amp; Fields!Phone.Value</Value>
+                              <Value>="咨询电话: " &amp; Fields!Phone.Value</Value>
                               <Style>
-                                <FontSize>8pt</FontSize>
+                                <FontSize>9pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -974,7 +972,7 @@
                             <TextRun>
                               <Value>="地址: " &amp; Fields!Address.Value</Value>
                               <Style>
-                                <FontSize>8pt</FontSize>
+                                <FontSize>9pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -999,7 +997,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.25in</Height>
+              <Height>0.17708in</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -1010,9 +1008,9 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value />
+                              <Value>健康热线: 400-700-5758</Value>
                               <Style>
-                                <FontSize>8pt</FontSize>
+                                <FontSize>9pt</FontSize>
                               </Style>
                             </TextRun>
                           </TextRuns>
@@ -1037,7 +1035,7 @@
               </TablixCells>
             </TablixRow>
             <TablixRow>
-              <Height>0.25in</Height>
+              <Height>0.17708in</Height>
               <TablixCells>
                 <TablixCell>
                   <CellContents>
@@ -1048,7 +1046,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value />
+                              <Value>网址: www.beehall.com</Value>
                               <Style>
                                 <FontSize>8pt</FontSize>
                               </Style>
@@ -1098,9 +1096,9 @@
         </TablixRowHierarchy>
         <DataSetName>SOProduceSummaryDataSet</DataSetName>
         <Top>2.10348in</Top>
-        <Left>0.02874in</Left>
-        <Height>0.89584in</Height>
-        <Width>2.88459in</Width>
+        <Left>0.00374in</Left>
+        <Height>0.75in</Height>
+        <Width>2.76918in</Width>
         <ZIndex>5</ZIndex>
         <Style>
           <Border>
@@ -1109,14 +1107,14 @@
         </Style>
       </Tablix>
     </ReportItems>
-    <Height>3.16598in</Height>
+    <Height>3.25973in</Height>
     <Style>
       <Border>
         <Style>None</Style>
       </Border>
     </Style>
   </Body>
-  <Width>2.96957in</Width>
+  <Width>2.9134in</Width>
   <Page>
     <PageWidth>2.9134in</PageWidth>
     <LeftMargin>1in</LeftMargin>
